--- a/beamscheme.lpi
+++ b/beamscheme.lpi
@@ -149,7 +149,7 @@
       <Unit0>
         <Filename Value="beamscheme.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="1"/>
+        <EditorIndex Value="2"/>
         <CursorPos X="35" Y="28"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -160,8 +160,9 @@
         <ComponentName Value="BSForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="847"/>
-        <CursorPos X="48" Y="875"/>
+        <IsVisibleTab Value="True"/>
+        <TopLine Value="967"/>
+        <CursorPos Y="996"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -493,8 +494,8 @@
       <Unit49>
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtobjects.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="2894"/>
-        <CursorPos Y="2912"/>
+        <TopLine Value="3057"/>
+        <CursorPos Y="3075"/>
         <UsageCount Value="13"/>
       </Unit49>
       <Unit50>
@@ -644,7 +645,7 @@
         <ComponentName Value="AboutForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="4"/>
         <CursorPos X="35" Y="17"/>
         <UsageCount Value="200"/>
@@ -677,8 +678,8 @@
       <Unit74>
         <Filename Value="/usr/lib64/lazarus/lcl/interfaces/qt5/qtobject.inc"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="270"/>
-        <CursorPos Y="290"/>
+        <TopLine Value="1389"/>
+        <CursorPos Y="1408"/>
         <UsageCount Value="10"/>
       </Unit74>
       <Unit75>
@@ -786,7 +787,7 @@
       <Unit88>
         <Filename Value="source/bstypes.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="3"/>
+        <EditorIndex Value="4"/>
         <TopLine Value="320"/>
         <CursorPos X="30" Y="343"/>
         <ExtraEditorCount Value="1"/>
@@ -810,7 +811,7 @@
       <Unit90>
         <Filename Value="source/param2dfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="6"/>
+        <EditorIndex Value="7"/>
         <TopLine Value="27"/>
         <CursorPos X="28" Y="44"/>
         <UsageCount Value="200"/>
@@ -832,7 +833,7 @@
       <Unit93>
         <Filename Value="source/mathsfuncs.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="11"/>
         <CursorPos Y="40"/>
         <ExtraEditorCount Value="1"/>
@@ -848,9 +849,9 @@
       <Unit94>
         <Filename Value="source/importunit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="2"/>
-        <TopLine Value="685"/>
-        <CursorPos X="17" Y="673"/>
+        <EditorIndex Value="3"/>
+        <TopLine Value="728"/>
+        <CursorPos Y="740"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -867,7 +868,7 @@
         <ComponentName Value="SettingsForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="5"/>
         <TopLine Value="61"/>
         <CursorPos X="47" Y="92"/>
         <ExtraEditorCount Value="1"/>
@@ -910,8 +911,7 @@
       <Unit99>
         <Filename Value="source/param1dfuncs.pas"/>
         <UnitName Value="param1Dfuncs"/>
-        <IsVisibleTab Value="True"/>
-        <EditorIndex Value="5"/>
+        <EditorIndex Value="6"/>
         <TopLine Value="120"/>
         <CursorPos X="48" Y="136"/>
         <ExtraEditorCount Value="2"/>
@@ -953,9 +953,9 @@
       </Unit102>
       <Unit103>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1136"/>
-        <CursorPos Y="1155"/>
+        <EditorIndex Value="1"/>
+        <TopLine Value="15"/>
+        <CursorPos X="51" Y="41"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
@@ -963,6 +963,7 @@
           <CursorPos X="32" Y="797"/>
         </ExtraEditor1>
         <UsageCount Value="18"/>
+        <Loaded Value="True"/>
       </Unit103>
       <Unit104>
         <Filename Value="../REPPs/reppsunit.pas"/>
@@ -1025,7 +1026,7 @@
       </Unit111>
       <Unit112>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmSpecRegress/uhillfit.pas"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="29"/>
         <CursorPos X="28" Y="190"/>
         <UsageCount Value="26"/>
@@ -1033,7 +1034,7 @@
       </Unit112>
       <Unit113>
         <Filename Value="../../.lazarus/onlinepackagemanager/packages/LMath/lmRegression/unlfit.pas"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="480"/>
         <CursorPos Y="510"/>
         <UsageCount Value="24"/>
@@ -1067,124 +1068,124 @@
     </Build>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1098" Column="11" TopLine="1098"/>
       </Position1>
       <Position2>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1129" TopLine="1100"/>
       </Position2>
       <Position3>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1130" Column="66" TopLine="1101"/>
       </Position3>
       <Position4>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="449" Column="27" TopLine="430"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1115" Column="33" TopLine="1101"/>
       </Position4>
       <Position5>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1113" Column="38" TopLine="1101"/>
       </Position5>
       <Position6>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1114" Column="33" TopLine="1101"/>
       </Position6>
       <Position7>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="452" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1059" Column="19" TopLine="1052"/>
       </Position7>
       <Position8>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="454" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1060" Column="37" TopLine="1052"/>
       </Position8>
       <Position9>
-        <Filename Value="source/mathsfuncs.pas"/>
-        <Caret Line="456" TopLine="429"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1058" Column="30" TopLine="1052"/>
       </Position9>
       <Position10>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1126" Column="17" TopLine="1093"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1056" Column="64" TopLine="1052"/>
       </Position10>
       <Position11>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1113" Column="12" TopLine="1093"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1059" TopLine="1052"/>
       </Position11>
       <Position12>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1115" TopLine="1093"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1060" TopLine="1052"/>
       </Position12>
       <Position13>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="1086" Column="43" TopLine="1078"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1097" TopLine="1080"/>
       </Position13>
       <Position14>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="1337" Column="24" TopLine="1309"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1098" TopLine="1080"/>
       </Position14>
       <Position15>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="932" TopLine="906"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1100" TopLine="1080"/>
       </Position15>
       <Position16>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="960" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1101" TopLine="1080"/>
       </Position16>
       <Position17>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="961" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1102" TopLine="1080"/>
       </Position17>
       <Position18>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="962" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1103" TopLine="1095"/>
       </Position18>
       <Position19>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="963" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1105" TopLine="1095"/>
       </Position19>
       <Position20>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="964" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1106" TopLine="1095"/>
       </Position20>
       <Position21>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="965" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1108" TopLine="1095"/>
       </Position21>
       <Position22>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="966" TopLine="948"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1109" TopLine="1095"/>
       </Position22>
       <Position23>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="944" Column="60" TopLine="930"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1115" TopLine="1095"/>
       </Position23>
       <Position24>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="332" Column="16" TopLine="309"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1117" TopLine="1095"/>
       </Position24>
       <Position25>
-        <Filename Value="source/bsunit.pas"/>
-        <Caret Line="875" Column="48" TopLine="847"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1118" TopLine="1095"/>
       </Position25>
       <Position26>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="262" Column="3" TopLine="244"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1120" TopLine="1095"/>
       </Position26>
       <Position27>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="338" Column="49" TopLine="320"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="1121" TopLine="1095"/>
       </Position27>
       <Position28>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="344" Column="25" TopLine="320"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="6" Column="35"/>
       </Position28>
       <Position29>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="339" Column="26" TopLine="320"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="90" Column="18" TopLine="60"/>
       </Position29>
       <Position30>
-        <Filename Value="source/bstypes.pas"/>
-        <Caret Line="338" Column="31" TopLine="320"/>
+        <Filename Value="../../.lazarus/onlinepackagemanager/packages/Tracker/Tracker2.pas"/>
+        <Caret Line="213" Column="53" TopLine="184"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
